# resnet50-classification

./: README.md  pyproject.toml
notebook/: 01_gpu_check.ipynb  02_eda.ipynb
scripts/: split_data.py  train_resnet.py  val_resnet.py
